modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-
+ 
 <body>
   <nav class="navbar">
     <h1 class="titulo-nome">Luis.dev</h1>
@@ -22,7 +22,7 @@
   <main>
     <section class="home">
       <div class="imagem-perfil">img</div>
-      <div>
+      <div class="descricao-home">
         <h2 class="titulo-apresentacao">Olá,me chamo <br>Luis 👨🏻‍💻🤓</h2>
         <h2 class="titulo-apresentacao destaque-apresentacao">Desenvolvedor <br> Front End</h2>
       </div>
