--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <p class="paragrafo">Aqui estão alguns projetos que já desenvolvi</p>
       <div class="grid-projetos">
         <div class="card-projeto">
-          <img src="https://placehold.co/340x250.png" alt="" class="img-projeto">
+          <img src="https://app.netlify.com/.netlify/images?url=https://d33wubrfki0l68.cloudfront.net/684a0ce0a26b61fb48ad540c/screenshot_2025-06-11-23-12-03-0000.webp&fit=cover&h=600&q=100&w=600" alt="" class="img-projeto">
           <div class="descricao-projeto">
             <div class="header-projeto">
               <h1 class="titulo-projeto">Titulo do projeto</h1>
@@ -66,8 +66,8 @@
             <p class="paragrafo-projeto">Página de login</p>
           </div>
           <div class="actions-projetos">
-            <a href="" class="botao-github"><img src="./img/github.svg" alt="">GitHub</a>
-            <a href="" class="botao-projeto"><img src="./img/link.svg" alt="">Projeto</a>
+            <a href="https://github.com/LuisHenriquezzz/login-page" class="botao-github"><img src="./img/github.svg" alt="">GitHub</a>
+            <a href="projectloginpg.netlify.app" class="botao-projeto"><img src="./img/link.svg" alt="">Projeto</a>
           </div>
         </div>
       </div>
